--- a/style.css
+++ b/style.css
@@ -59,6 +59,9 @@ button{
     color: var(--whiteColor);
     box-shadow: -8px -8px 15px var(--boxShadowColor3);
     cursor: pointer;
+}
+button:hover{
+    box-shadow: none;
 
 }
 .equal-btn{
